--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -6,7 +6,7 @@
     background: #f5f5f5;
   }
   &.section-about {
-    height: 500px !important;
+    height: 573px !important;
     border-top: 1px solid #f5f5f5;
     border-bottom: 1px solid #f5f5f5;
   }
@@ -19,21 +19,13 @@
         background-repeat: no-repeat;
         background-size: 100% 100%;
         background-color: #eee;
-        // &.section-specialty {
-        //   background-image: url("../../assets/specialty/co-xuong-khop.jpg");
-        // }
-        // &.section-medical-facility {
-        //   background-image: url("../../assets/medical-facility/thucuc.jpg");
-        // }
+       
         &.section-outstanding-doctor {
           // background-image: url("../../assets/outstanding-doctor/doctor.jpg");
           width: 130px;
           height: 130px;
           border-radius: 50%;
-        }
-        &.section-handbook {
-          background-image: url("../../assets/handbook/handbook.jpg");
-        }
+        }       
       }
     }
   }
@@ -138,6 +130,8 @@
   a {
     text-decoration: none;
   }
+  height: 55px;
+  margin-top: 5px;
 }
 
 .section-about {
