--- a/src/containers/HomePage/Section/MedicalFacility.scss
+++ b/src/containers/HomePage/Section/MedicalFacility.scss
@@ -1,7 +1,7 @@
-.clinic-child {
+.barbershop-child {
     cursor: pointer;
 
-    .clinic-name {
+    .barbershop-name {
         padding: 10px 0;
         font-size: 15px;
 
